--- a/www/scss/components/_block-content.scss
+++ b/www/scss/components/_block-content.scss
@@ -1,4 +1,8 @@
-.block-content {
+.block-page {
+    display: none;
+    &.block-page--active {
+        display: block;
+    }
 }
 
 .block-content__container {
@@ -15,6 +19,7 @@
             max-width: 100%;
         }
     }
+    
 }
 
 .block-content__form {
@@ -40,4 +45,26 @@
 .block-content__footer {
     padding: 40px 0 0;
     text-align: right;
+    .import-file &, .delete-page & {
+        text-align: center;
+    }
 }
+
+.block-content__options {
+    display: flex;
+    flex-wrap: wrap;
+    label {
+        min-height: 25px;
+        margin: 0 20px 0 0;
+        
+    }
+    p {
+        width: 100%;
+    }
+}
+
+.block-content__warmning {
+    margin-top: 8px;
+    font-size: 13px;
+}
+
