--- a/www/scss/components/_block-content.scss
+++ b/www/scss/components/_block-content.scss
@@ -5,20 +5,19 @@
     }
 }
 
-.block-content__container {
+.page-item {
     width: 100%;
-    padding: 15px 0;
+    padding: 15px;
     border-radius: 4px;
-    @media screen and (min-width: 1280px) {
-        width: 50%;
-        max-width: 480px;
-    }
-    .edit-user & {
-        @media screen and (min-width: 1280px) {
-            width: 100%;
-            max-width: 100%;
-        }
-    }
+    // @media screen and (min-width: 1280px) {
+    //     width: 50%;
+    // }
+    // .edit-user & {
+    //     @media screen and (min-width: 1280px) {
+    //         width: 100%;
+    //         max-width: 100%;
+    //     }
+    // }
     
 }
 
@@ -33,13 +32,46 @@
 
 .block-content__input, .block-content__select {
     width: 100%;
-    padding: 10px;
     border-radius: 3px;
-    border: 1px solid $c-border;
+    border-bottom: 1px solid $c-border;
+    position: relative;
+    select, input {
+        width: 100%;
+        height: 100%;
+        padding: 10px 20px 10px 0;
+        border: 0;
+        appearance: none;
+    }
+}
+
+.block-content__select {
+    &::before {
+        content: '';
+        width: 10px;
+        height: 10px;
+        position: absolute;
+        top: 14px;
+        right: 5px;
+        border-top: 1px solid $c-border;
+        border-right: 1px solid $c-border;
+        transform: rotate(135deg);
+        pointer-events: none;
+    }
 }
 
 .block-content__description {
     margin-bottom: 10px;
+    label {
+        position: relative;
+        input {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+        }
+    }
 }
 
 .block-content__footer {
