--- a/www/scss/main.scss
+++ b/www/scss/main.scss
@@ -61,7 +61,7 @@ input, button, select {
 .button {
     min-width: 180px;
     padding: 10px;
-    border-radius: 30px;
+    border-radius: 3px;
     border: 1px solid transparent;
     text-align: center;
     color: $c-primary;
@@ -186,7 +186,7 @@ table {
 
 /* When the checkbox is checked, add a blue background */
 .container-checkbox input:checked ~ .checkmark {
-  background-color: #2196F3;
+  background-color: $c-primary;
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
@@ -228,4 +228,92 @@ table {
 
 .hidden {
     display: none;
+}
+
+.flex-wrap {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.grid {
+    align-items: stretch;
+    &.grid-33 {
+        .card {
+            width: calc(33% - 10px);
+            margin: 5px;
+            position: relative;
+            &:before {
+                content: '';
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                right: 0;
+                background: rgba(#111, 0.35);
+            }
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+    }
+}
+
+.card-add-img {
+    label {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        display: block;
+        &:after {
+            width: 2px;
+            height: 18px;
+        }
+        &:before {
+            width: 18px;
+            height: 2px;
+        }
+        &:after, &:before {
+            content: '';
+            background: #fff;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 2;
+        }
+        input {
+           width: 100%;
+           height: 100%; 
+           opacity: 0;
+        }
+    }
+}
+
+.color-detail {
+    width: 40px;
+    height: 30px;
+    display: inline-block;
+    background: orangered;
+    margin-right: 15px;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    
+}
+
+.center-text {
+    text-align: center;
+}
+
+.block-content__pre-file {
+    display: inline-block;
+    padding: 10px;
+    min-width: 180px;
+    background: rgba(#ccc, 0.5);
+}
+
+.small-p {
+    font-size: 13px;
+    color: grey;
 }
