--- a/www/scss/main.scss
+++ b/www/scss/main.scss
@@ -1,231 +1,50 @@
-
-@import 'general/variables';
-@import 'components/sidebar.scss';
-@import 'components/header.scss';
-@import 'components/block-content';
-@import 'pages/login.scss';
-
-//global class
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-a {
-    text-decoration: none;
-}
-
-ul, li {
-    list-style: none;
-}
-
-body {
-    background: $c-body;
-    font-size: 15px;
-    font-family: 'Roboto', sans-serif;
-}
-
-input, button, select {
-    font-size: 15px;
-    &:focus {
-        outline: none;
-    }
-}
-
-.flex {
-    display: flex;
-}
-
-.flex-align-center {
-    @extend .flex;
-    align-items: center;
-}
-
-.flex-justify-center {
-    @extend .flex;
-    justify-content: center;
-}
-
-.flex-center {
-    @extend .flex-align-center;
-    @extend .flex-justify-center;
-}
-
-.flex-between {
-    @extend .flex-align-center;
-    justify-content: space-between;
-}
-
-.button {
-    min-width: 180px;
-    padding: 10px;
-    border-radius: 30px;
-    border: 1px solid transparent;
-    text-align: center;
-    color: $c-primary;
-    font-weight: 600;
-    background: $c-white;
-    
-}
-
-.button-primary {
-    background: $c-primary;
-    color: $c-white;
-    transition: all 0.3s ease-in-out;
-    &:hover {
-        background: rgba($c-primary, 0.75);
-    }
-}
-
-.button-cta {
-    @extend .button-primary;
-    width: auto;
-    min-width: auto;
-    padding: 0;
-    margin-bottom: 8px;
-    font-weight: 400;
-    border: 0;
-
-}
-
-.bold-text {
-    font-weight: 600;
-}
-
-.main-content {
-    padding: 0 30px;
-    flex: 1;
-    background: $c-white;
-}
-
-table {
-    width: 100%;
-    border-collapse: collapse;
-    tbody {
-        border: 1px solid $c-border;
-    }
-    thead {
-        border: 1px solid $c-primary;
-    }
-     td {
-        padding: 12px;
-        border-bottom: 1px solid $c-border;
-        &:last-child {
+.custom-control.custom-checkbox {
+    padding: 100% 0 0 0;
+    position: relative;
+    label.custom-control-label {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #111;
+        color: #fff;
+        &:hover {
+            background: rgba($color: #111, $alpha: 0.6);
+        }
+        &:before {
             width: 30px;
-            text-align: center;
+            height: 30px;
+            border-radius: 50%;
+            background: 0 0;
+            border: 1px solid #fff;
+            left: auto;
+            right: 5px;
+            z-index: 1;
         }
-        select {
-            height: 35px;
-            padding: 5px 10px;
-            border-radius: 3px;
+        &:after {
+            position: absolute;
+            top: 9px;
+            left: auto;
+            display: block;
+            width: 20px;
+            height: 20px;
+            right: 10px;
+            z-index: 1;
         }
     }
-    th {
-        padding: 12px;
-        background: $c-primary;
-        color: $c-white;
-        text-align: left;
-        &:last-child {
-            width: 30px;
-        }
+    .custom-control-input:checked~.custom-control-label::before {
+        background-color: #111;
     }
 }
 
-.button-delete {
-    display: inline-block;
-    border: 0;
-    background: transparent;
-    color: red;
-    transition: all 0.3s ease-in-out;
-    i {
-        margin: 0;
-    }
-     &:hover {
-         color: rgba(red, 0.75);
-     }
+.mb-20 {
+    margin-bottom: 20px;
 }
 
-.container-checkbox {
-  @extend .flex-align-center;
-  position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 15px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-/* Hide the browser's default checkbox */
-.container-checkbox input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
-}
-
-/* Create a custom checkbox */
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 25px;
-  width: 25px;
-  background-color: #eee;
-}
-
-/* On mouse-over, add a grey background color */
-.container-checkbox:hover input ~ .checkmark {
-  background-color: #ccc;
-}
-
-/* When the checkbox is checked, add a blue background */
-.container-checkbox input:checked ~ .checkmark {
-  background-color: #2196F3;
-}
-
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-
-/* Show the checkmark when checked */
-.container-checkbox input:checked ~ .checkmark:after {
-  display: block;
-}
-
-/* Style the checkmark/indicator */
-.container-checkbox .checkmark:after {
-  left: 9px;
-  top: 5px;
-  width: 5px;
-  height: 10px;
-  border: solid white;
-  border-width: 0 3px 3px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.warning-text {
-    color: red;
-}
-
-.success-text {
-    color: green;
-}
-
-.mb-10 {
-    margin-bottom: 10px;
-}
-
-.hidden {
-    display: none;
+button.btn {
+    width: calc(50% - 3px);
 }
